--- a/mylibrary/style.css
+++ b/mylibrary/style.css
@@ -73,8 +73,9 @@ section{
 }
 .Welcome{
    font-weight:800;
-   color: cornsilk;
-   font-size: 17px;
+   color: rgba(40, 7, 226, 0.664);
+   font-size: 22px;
+   font-weight: 900;
 }
 .span-main{
     font-weight:800;
@@ -107,11 +108,11 @@ section{
    justify-content: center;
     font-weight: 900;
    font-size: 21px;
-   color:purple;
+   color:royalblue;
    margin-bottom: 30px;
    /* margin-top: 30px; */
    border-radius: 10px;
-   border-left: 7px solid rgba(128, 0, 128, 0.521);
+   border-left: 7px solid blue;
   padding: 10px;
   background-color: rgba(161, 138, 106, 0.26);
   
@@ -129,6 +130,7 @@ section{
 .text{
    margin-left: 20px;
    margin-bottom: 250px;
+   text-align: center;
 }
 
 .cards{
@@ -145,6 +147,11 @@ section{
    box-shadow: 0 5px 25px rgba(1 1 1/ 50%);
    border-radius: 10px;
    padding: 28px;
+}
+
+.cards :hover{
+
+    background-color: royalblue;
 }
 
 
