--- a/mylibrary/style.css
+++ b/mylibrary/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Cairo:wght@200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Cairo:wght@200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tajawal:wght@300;400;500;700;800&display=swap');
 *{
-    font-family: 'Poppins', sans-serif,'Amiri', serif,'Poppins', sans-serif;
-    /* font-family: ;
-    font-family:  */
+    font-family: 'Poppins', sans-serif,'Amiri', serif,'Poppins', sans-serif,
+    'Amiri', serif,
+ 'Cairo', sans-serif,
+ 'Poppins', sans-serif,
+ 'Tajawal', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -175,6 +178,64 @@ section{
 
     background-color: royalblue;
 }
+.name-books{
+    font-size:17px;
+  color:dodgerblue;
+  font-weight: 700;
+  font-family: 'Amiri', serif;
+}
+
+
+.par-book1{
+   
+    text-align: center;
+    color: black;
+    /* width: 11px; */
+    font-size: 13px;
+    font-weight: 800;
+  margin-bottom: 10%;
+  /* padding-top:3px; */
+ font-family:  'Amiri', serif,
+  'Cairo', sans-serif,
+  'Poppins', sans-serif,
+  'Tajawal', sans-serif;
+
+}
+.span-par{
+    text-align: center;
+    color: red;
+   
+    font-size: 14px;
+    font-weight: 900;
+ font-family:  'Amiri', serif,
+  'Cairo', sans-serif,
+  'Poppins', sans-serif,
+  'Tajawal', sans-serif;
+}
+.name1{
+ 
+    font-size: 15px;
+    font-weight: 200;
+    font-family: 'Amiri', serif,
+  'Cairo', sans-serif,
+  'Poppins', sans-serif,
+  'Tajawal', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media only screen and (max-width: 600px){ 
@@ -230,7 +291,7 @@ section{
       padding-top: 10px;
       left: 56%;
       right: 10%;
-      top: 420px;
+      top: 470px;
         justify-content: center;
      }
 /* section 2 */
