--- a/mylibrary/style.css
+++ b/mylibrary/style.css
@@ -127,6 +127,27 @@ section{
      color:blue
  }
 
+ .par-1{
+     width: 300px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: inherit;
+    font-weight: 700;
+    font-size: 18px;
+    color:firebrick;
+    text-decoration-line:underline;
+    /* border-bottom: 3px solid black;
+    border-inline-start: lavenderblush; */
+    display: inherit;
+    font-weight: 600;
+   position: absolute;
+   right: 24%;
+   left: 38%;
+  bottom:-100px;
+   background-color: #EEE;
+   padding: 4px;
+ }
  
 .title{
    display: flex;
@@ -168,10 +189,12 @@ section{
     background-color:#fff;
     margin-left: 35px;
    width: 270px;
-   height: 450px;
+   height: 510px;
    box-shadow: 0 5px 25px rgba(1 1 1/ 50%);
    border-radius: 10px;
-   padding: 28px;
+  padding-left: 25px;
+  padding-right: 25px;
+   /* padding-top: 70px; */
 }
 
 .cards :hover{
@@ -221,17 +244,11 @@ section{
   'Poppins', sans-serif,
   'Tajawal', sans-serif;
 }
-
-
-
-
-
-
-
-
-
-
-
+.read{
+    text-decoration: none;
+    font-weight: 600;
+    color:dodgerblue
+}
 
 
 
@@ -294,6 +311,28 @@ section{
       top: 470px;
         justify-content: center;
      }
+     .par-1{
+        width: 400px;
+       white-space: nowrap;
+       text-overflow: ellipsis;
+       overflow: hidden;
+       font-weight: 600;
+       color:firebrick;
+       text-decoration-line:underline;
+       /* border-bottom: 3px solid black;
+       border-inline-start: lavenderblush; */
+       display: inherit;
+       font-weight: 600;
+      position: absolute;
+      right: 24%;
+      left: 25%;
+     bottom:-110px
+     }
+     .hr-0{
+         size: 11px;
+     }
+     
+       /* font-size: px; */
 /* section 2 */
 .title{
     box-sizing: border-box;
@@ -303,7 +342,17 @@ section{
    margin-left:-80px;
     border: 4px solid blue;
      }
-
+     .card{
+        background-color:#fff;
+        margin-left: 35px;
+       width: 270px;
+       height: 510px;
+       box-shadow: 0 5px 25px rgba(1 1 1/ 50%);
+       border-radius: 10px;
+      padding-left: 25px;
+      padding-right: 25px;
+       /* padding-top: 70px; */
+    }
 
 }
 
