--- a/mylibrary/style.css
+++ b/mylibrary/style.css
@@ -126,29 +126,24 @@ section{
  .acc a:hover{
      color:blue
  }
-
- .par-1{
-     width: 300px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    display: inherit;
+ .flex {
+     display:flex;
+     text-decoration-line:underline;
+     overflow: hidden;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 17px;
+    font-family: 'Amiri', serif;
     color:firebrick;
-    text-decoration-line:underline;
-    /* border-bottom: 3px solid black;
-    border-inline-start: lavenderblush; */
-    display: inherit;
-    font-weight: 600;
-   position: absolute;
-   right: 24%;
-   left: 38%;
-  bottom:-100px;
-   background-color: #EEE;
-   padding: 4px;
+     width: 270px;
+     padding: 5px;
+     margin-left: auto;
+     margin-right: auto;
+     text-align: center;
+     justify-content: center;
+     align-items: center;
  }
- 
+
+
 .title{
    display: flex;
    justify-content: center;
@@ -263,7 +258,7 @@ section{
       }
       #navs a{
           padding-left: 10px;
-          color: red
+          color: #344CB7;
       }
       .logoHeader{
           font-size: 20px;
@@ -277,8 +272,23 @@ section{
         background : url(img/cover\ img.jpg) no-repeat;
         background-size: cover;
         background-position:60% ;
+        /* margin-left: auto; */
+        margin-right:1%;
         /* margin-bottom: -10px; */
       }
+      .flex {
+       
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+       font-weight: 600;
+       font-family: 'Amiri', serif;
+      font-size: 15px;
+        padding: 5px;
+        width: 200;
+        margin: auto 5px 10px -120px;
+    }
       #Welcome{
          display:flex;
          justify-content: center;
@@ -311,36 +321,21 @@ section{
       top: 470px;
         justify-content: center;
      }
-     .par-1{
-        width: 400px;
-       white-space: nowrap;
-       text-overflow: ellipsis;
-       overflow: hidden;
-       font-weight: 600;
-       color:firebrick;
-       text-decoration-line:underline;
-       /* border-bottom: 3px solid black;
-       border-inline-start: lavenderblush; */
-       display: inherit;
-       font-weight: 600;
-      position: absolute;
-      right: 24%;
-      left: 25%;
-     bottom:-110px
-     }
+     
      .hr-0{
          size: 11px;
      }
      
-       /* font-size: px; */
+      
 /* section 2 */
 .title{
     box-sizing: border-box;
     width: 200px;
     height: 50px;
     padding: 3px;  
-   margin-left:-80px;
-    border: 4px solid blue;
+    margin-left:-80px;
+    color:#577BC1;
+    border: 4px solid #577BC1;
      }
      .card{
         background-color:#fff;
@@ -351,14 +346,11 @@ section{
        border-radius: 10px;
       padding-left: 25px;
       padding-right: 25px;
-       /* padding-top: 70px; */
+     
     }
 
 }
+/* END section 2 */
 
-
-
-
-    
 
  
